# json2schema2schema

./: Makefile  README.md  TODO  benchmark.py  main.py  pyproject.toml  requirements.dev.txt
docs/source/: conf.py  index.rst
genschema/comparators/: __init__.py
json2schema/: __init__.py  cli.py  node.py  pipeline.py  pseudo_arrays.py
json2schema/comparators/: __init__.py  delete_element.py  empty.py  flag.py  format.py  required.py  template.py  type.py
json2schema/core/: pipeline.py  pseudo_arrays.py
json2schema/core/comparators/: __init__.py  delete_element.py  empty.py  format.py  template.py  type.py
tests/: compare_schema_digests.py
