[build-system]
requires = ["setuptools>=61.0", "wheel", "rich"]
build-backend = "setuptools.build_meta"

[project]
name = "json2schema"
dynamic = ["version"]
description = "A library for comparing JSON schemas and displaying differences"
authors = [
    {name = "Miskler", email = "mail@miskler.ru"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
keywords = ["json", "schema", "diff", "comparison"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",

    "sphinx",
    "sphinx-autoapi",
    "furo",
    "docutils",
    "types-docutils"
]

[project.urls]
Homepage = "https://github.com/Miskler/json2schema"
Repository = "https://github.com/Miskler/json2schema"
Documentation = "https://miskler.github.io/json2schema/basic/quick_start/index.html"
Issues = "https://github.com/Miskler/json2schema/issues"

[project.scripts]
json2schema = "json2schema.cli:main"

[tool.setuptools.dynamic]
version = {attr = "json2schema.__version__"}

[tool.setuptools.packages.find]
include = ["json2schema*"]

[tool.setuptools.package-data]
"json2schema" = ["py.typed"]


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=json2schema --cov-report=term-missing --cov-report=html"
